[package]
name = "pio-uart"
version = "0.2.1"
edition = "2021"
description = "A software UART implementation for the RP2040 using the PIO feature."
license = "BSD-3-Clause"
repository = "https://github.com/Sympatron/pio-uart"
documentation = "https://docs.rs/pio-uart"
readme = "README.md"
keywords = ["uart", "pio", "rp2040", "embedded"]
categories = ["embedded", "no-std"]
authors = ["Karsten Große"]

[features]
default = []
defmt = ["dep:defmt"]

[dependencies]
cortex-m = "0.7.7"
defmt = { version = "0.3.5", optional = true }
embedded-io = "0.6.1"
fugit = "0.3.7"
pio = "0.3.0"
rp2040-hal = "0.11"

[dev-dependencies]
cortex-m-rt = "0.7.3"
panic-halt = "1.0.0"
rp-pico = "0.9.0"

[patch.crates-io]
rp2040-hal = { git = "https://github.com/MarcusGrass/rp-hal", rev = "79e022ddc15377c155682db15138b623212b978d"}
